login and sign up ready

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="login">Login</string>
     <string name="sign_up">Sign up</string>
     <string name="ready_to_score_let_s_get_you_logged_in">Ready to score? Let’s get you logged in!</string>
+    <string name="email">Email\n</string>
+    <string name="ball">Ball</string>
 </resources>
