land activities also done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="ready_to_score_let_s_get_you_logged_in">Ready to score? Let’s get you logged in!</string>
     <string name="email">Email\n</string>
     <string name="ball">Ball</string>
+    <string name="ready_to_join_the_team_let_s_get_you_signed_up">Ready to join the team? Let’s get you signed up!</string>
 </resources>
