--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="email">Email\n</string>
     <string name="ball">Ball</string>
     <string name="ready_to_join_the_team_let_s_get_you_signed_up">Ready to join the team? Let’s get you signed up!</string>
+    <string name="password_again">Password Again</string>
 </resources>
