--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,12 +22,24 @@
     <string name="end">End:</string>
     <string name="details">Details</string>
     <string name="location">Location:</string>
+    <string name="location2">Location</string>
     <string name="search">Search</string>
     <string name="profile">Profile</string>
     <string name="my_teams">My Teams</string>
     <string name="logout_">Logout</string>
-    <string name="my_tournaments">My tournaments</string>
+    <string name="my_tournaments">My Tournaments</string>
     <string name="edit_profile">Edit Profile</string>
     <string name="my_tournaments_">My Tournaments</string>
     <string name="edit">Edit</string>
+    <string name="create_tournament">Create Tournament</string>
+    <string name="home">Home</string>
+    <string name="email_">Email:</string>
+    <string name="username_">Username:</string>
+    <string name="delete_profile">Delete Profile</string>
+    <string name="start_date">Start date (YYYY-MM-DD)</string>
+    <string name="end_date">End date (YYYY-MM-DD)</string>
+    <string name="description">Description</string>
+    <string name="number_of_teams">Number of teams</string>
+    <string name="create">Create</string>
+    <string name="max_number_of_teams">Max number of teams:</string>
 </resources>
