--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,4 +49,5 @@
     <string name="description_">Description:</string>
     <string name="organiser_">Organiser:</string>
     <string name="max_teams__">Max teams:</string>
+    <string name="update">Update</string>
 </resources>
